# serializer version: 1
# name: test_file_structure
  list([
    'v',
    'v/latest',
    'v/latest/.sitemap-marker.json',
    'v/latest/apple-touch-icon-114x114.png',
    'v/latest/apple-touch-icon-120x120.png',
    'v/latest/apple-touch-icon-144x144.png',
    'v/latest/apple-touch-icon-152x152.png',
    'v/latest/apple-touch-icon-167x167.png',
    'v/latest/apple-touch-icon-180x180.png',
    'v/latest/apple-touch-icon-57x57.png',
    'v/latest/apple-touch-icon-60x60.png',
    'v/latest/apple-touch-icon-72x72.png',
    'v/latest/apple-touch-icon-76x76.png',
    'v/latest/favicon-16x16.png',
    'v/latest/favicon-180x180.png',
    'v/latest/favicon-196x196.png',
    'v/latest/favicon-32x32.png',
    'v/latest/favicon-64x64.png',
    'v/latest/favicon-96x96.png',
    'v/latest/favicon.ico',
    'v/latest/hexcasting.js',
    'v/latest/index.css',
    'v/latest/index.html',
    'v/latest/index.js',
    'v/latest/logo.png',
    'v/latest/mstile-270x270.png',
    'v/latest/mstile-310x150.png',
    'v/latest/mstile-310x310.png',
    'v/latest/mstile-70x70.png',
    'v/latest/textures.css',
  ])
# ---
# name: test_render_app_release
  list([
    'apple-touch-icon-114x114.png',
    'apple-touch-icon-120x120.png',
    'apple-touch-icon-144x144.png',
    'apple-touch-icon-152x152.png',
    'apple-touch-icon-167x167.png',
    'apple-touch-icon-180x180.png',
    'apple-touch-icon-57x57.png',
    'apple-touch-icon-60x60.png',
    'apple-touch-icon-72x72.png',
    'apple-touch-icon-76x76.png',
    'favicon-16x16.png',
    'favicon-180x180.png',
    'favicon-196x196.png',
    'favicon-32x32.png',
    'favicon-64x64.png',
    'favicon-96x96.png',
    'favicon.ico',
    'hexcasting.js',
    'index.css',
    'index.html',
    'index.js',
    'logo.png',
    'mstile-270x270.png',
    'mstile-310x150.png',
    'mstile-310x310.png',
    'mstile-70x70.png',
    'textures.css',
    'v',
    'v/VERSION',
    'v/VERSION/.sitemap-marker.json',
    'v/VERSION/apple-touch-icon-114x114.png',
    'v/VERSION/apple-touch-icon-120x120.png',
    'v/VERSION/apple-touch-icon-144x144.png',
    'v/VERSION/apple-touch-icon-152x152.png',
    'v/VERSION/apple-touch-icon-167x167.png',
    'v/VERSION/apple-touch-icon-180x180.png',
    'v/VERSION/apple-touch-icon-57x57.png',
    'v/VERSION/apple-touch-icon-60x60.png',
    'v/VERSION/apple-touch-icon-72x72.png',
    'v/VERSION/apple-touch-icon-76x76.png',
    'v/VERSION/favicon-16x16.png',
    'v/VERSION/favicon-180x180.png',
    'v/VERSION/favicon-196x196.png',
    'v/VERSION/favicon-32x32.png',
    'v/VERSION/favicon-64x64.png',
    'v/VERSION/favicon-96x96.png',
    'v/VERSION/favicon.ico',
    'v/VERSION/hexcasting.js',
    'v/VERSION/index.css',
    'v/VERSION/index.html',
    'v/VERSION/index.js',
    'v/VERSION/logo.png',
    'v/VERSION/mstile-270x270.png',
    'v/VERSION/mstile-310x150.png',
    'v/VERSION/mstile-310x310.png',
    'v/VERSION/mstile-70x70.png',
    'v/VERSION/textures.css',
    'v/latest',
    'v/latest/.sitemap-marker.json',
    'v/latest/apple-touch-icon-114x114.png',
    'v/latest/apple-touch-icon-120x120.png',
    'v/latest/apple-touch-icon-144x144.png',
    'v/latest/apple-touch-icon-152x152.png',
    'v/latest/apple-touch-icon-167x167.png',
    'v/latest/apple-touch-icon-180x180.png',
    'v/latest/apple-touch-icon-57x57.png',
    'v/latest/apple-touch-icon-60x60.png',
    'v/latest/apple-touch-icon-72x72.png',
    'v/latest/apple-touch-icon-76x76.png',
    'v/latest/favicon-16x16.png',
    'v/latest/favicon-180x180.png',
    'v/latest/favicon-196x196.png',
    'v/latest/favicon-32x32.png',
    'v/latest/favicon-64x64.png',
    'v/latest/favicon-96x96.png',
    'v/latest/favicon.ico',
    'v/latest/hexcasting.js',
    'v/latest/index.css',
    'v/latest/index.html',
    'v/latest/index.js',
    'v/latest/logo.png',
    'v/latest/mstile-270x270.png',
    'v/latest/mstile-310x150.png',
    'v/latest/mstile-310x310.png',
    'v/latest/mstile-70x70.png',
    'v/latest/textures.css',
  ])
# ---
